<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#044378"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FF0000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_time_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Time"
            android:textColor="#FFFEFE"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/zero"
            android:textColor="#FF0000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:text="@string/point"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/button_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/button_false"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/button_true"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/button_first_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_left_double_arrow"
            android:textAllCaps="false"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_left"
            android:textAllCaps="false"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_right"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/button_last_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_right_double_arrow"
            android:textAllCaps="false"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_cheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cheat"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/setting"
        android:textSize="24sp" />

</LinearLayout>